- needs_update: remove patches item of coly.li, lmb and mfasheh. - patches.fixes/dlm-enable-debug.patch: update the patch from SLES11   to SLES11 SP1 tree.

--- a/series.conf
+++ b/series.conf
@@ -380,6 +380,11 @@
 	patches.suse/reiserfs-barrier-default
 
 	########################################################
+	# dlm
+	########################################################
+	patches.fixes/dlm-enable-debug.patch
+
+	########################################################
 	# ocfs2
 	########################################################
 	patches.suse/ocfs2-allocation-resrvations.patch
