- Restore following patches from SLES11 that are still needed for   SLES11-SP1 - patches.fixes/nfsd-05-sunrpc-cache-allow-thread-to-block-while-waiting-for.patch:   sunrpc/cache: allow thread to block while waiting for cache   update. (bnc#498708). - patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch:   sunrpc/cache: retry cache lookups that return -ETIMEDOUT   (bnc#498708). - patches.fixes/nfsd-07-nfsd-idmap-drop-special-request-deferal-in-favour-of.patch:   nfsd/idmap: drop special request deferal in favour of improved   default. (bnc#498708). - patches.fixes/nfsd-09-fix-kabi: Fix kabi breakage in previous   nfsd patch series (bnc#498708).

--- a/series.conf
+++ b/series.conf
@@ -354,6 +354,10 @@
 	patches.fixes/nfs-slot-table-alloc
 	patches.fixes/nfs-honour-server-preferred-io-size
 
+	patches.fixes/nfsd-05-sunrpc-cache-allow-thread-to-block-while-waiting-for.patch
+	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
+	patches.fixes/nfsd-07-nfsd-idmap-drop-special-request-deferal-in-favour-of.patch
+	patches.fixes/nfsd-09-fix-kabi
 	########################################################
 	# lockd + statd
 	########################################################
