- needs_update: Verify knikanth's patches in SLE11 but not in SP1 - patches.fixes/dm-release-map_lock-before-set_disk_ro: Release   md->map_lock before set_disk_ro  (bnc#556899 bnc#479784).

--- a/series.conf
+++ b/series.conf
@@ -699,6 +699,7 @@
 	patches.suse/dm-mpath-null-pgs
 	patches.fixes/dm-table-switch-to-readonly
 	patches.suse/dm-mpath-evaluate-request-result-and-sense
+	patches.fixes/dm-release-map_lock-before-set_disk_ro
 
 	########################################################
 	# md
