--- a/series.conf
+++ b/series.conf
@@ -421,6 +421,42 @@
 	patches.suse/nfs4acl-ai.diff
 	patches.fixes/zisofs-large-pagesize-read.patch
 
+	
+	########################################################
+	# Swap-over-NFS
+	########################################################
+	patches.suse/SoN-01-mm-setup_per_zone_wmarks.patch
+	patches.suse/SoN-02-doc.patch
+	patches.suse/SoN-03-mm-gfp-to-alloc_flags-expose.patch
+	patches.suse/SoN-04-page_alloc-reserve.patch
+	patches.suse/SoN-05-reserve-slub.patch
+	patches.suse/SoN-06-mm-kmem_estimate_pages.patch
+	patches.suse/SoN-07-mm-PF_MEMALLOC-softirq.patch
+	patches.suse/SoN-08-mm-page_alloc-emerg.patch
+	patches.suse/SoN-09-global-ALLOC_NO_WATERMARKS.patch
+	patches.suse/SoN-10-mm-page_alloc-GFP_EMERGENCY.patch
+	patches.suse/SoN-11-mm-reserve.patch
+	patches.suse/SoN-12-mm-selinux-emergency.patch
+	patches.suse/SoN-13-net-ps_rx.patch
+	patches.suse/SoN-14-net-sk_allocation.patch
+	patches.suse/SoN-15-netvm-reserve.patch
+	patches.suse/SoN-16-netvm-reserve-inet.patch
+	patches.suse/SoN-17-netvm-reserve-inet.patch-fix
+	patches.suse/SoN-18-netvm-skbuff-reserve.patch
+	patches.suse/SoN-19-netvm-sk_filter.patch
+	patches.suse/SoN-20-netvm-tcp-deadlock.patch
+	patches.suse/SoN-21-emergency-nf_queue.patch
+	patches.suse/SoN-22-netvm.patch
+	patches.suse/SoN-23-mm-swapfile.patch
+	patches.suse/SoN-24-mm-page_file_methods.patch
+	patches.suse/SoN-25-nfs-swapcache.patch
+	patches.suse/SoN-26-nfs-swapper.patch
+	patches.suse/SoN-27-nfs-swap_ops.patch
+	patches.suse/SoN-28-nfs-alloc-recursions.patch
+	patches.suse/SoN-29-fix-swap_sync_page-race
+	patches.suse/SoN-30-fix-uninitialized-var.patch
+
+
 	########################################################
 	# Netfilter
 	########################################################
