- patches.fixes/cpufreq_ondemand_performance_optimise_default_settings.patch:   CPUFREQ: ondemand: Limit default sampling rate to 300ms   max. (bnc#464461).

--- a/series.conf
+++ b/series.conf
@@ -329,6 +329,7 @@
 #	patches.suse/cpuidle-pseries-proc-idle
 #	patches.suse/cpuidle-eliminate-ppcmdpowersave1
 #	patches.suse/cpuidle-documentation
+	patches.fixes/cpufreq_ondemand_performance_optimise_default_settings.patch
 
 	########################################################
 	# AGP, graphics related stuff
