- needs_update:   patches.suse/panic-on-io-nmi.diff: partially mainline (5211a242),   the rest added as: - patches.suse/panic-on-io-nmi-SLE11-user-space-api.patch: API   fix: X86: sysctl to allow panic on IOCK NMI error (bnc#427979). - patches.suse/kdb-common: Refresh. - patches.suse/kdump-dump_after_notifier.patch: Refresh.

--- a/series.conf
+++ b/series.conf
@@ -341,6 +341,7 @@
 	# TIOCGDEV - suse special
 	patches.fixes/tiocgdev
 +still_needed?	patches.suse/mm-increase-dirty-limits.patch
+	patches.suse/panic-on-io-nmi-SLE11-user-space-api.patch
 
         ########################################################
         # Networking, IPv6
