Forward port two x86 patches from SLE11.
- needs_update:
- patches.arch/x86-fix-nodac: x86: fix iommu=nodac parameter
  handling (bnc#463829).
- patches.arch/x86-mcp51-no-dac: x86: disallow DAC for MCP51
  PCI bridge (bnc#463829).

--- a/series.conf
+++ b/series.conf
@@ -185,6 +185,8 @@
 	patches.arch/add_x86_support_for_hpet_msi_intr_remap.patch
 	patches.arch/x86-crypto-pclmulqdq-accelerated-implementation.patch
 	patches.arch/x86-crypto-add-ghash-algorithm-test.patch
+	patches.arch/x86-fix-nodac
+	patches.arch/x86-mcp51-no-dac
 
 	patches.arch/kvm-split-paravirt-ops-by-functionality
 	patches.arch/kvm-only-export-selected-pv-ops-feature-structs
