- patches.arch/x86-64-add-comment-for-rodata-large-page-retainment:   x86-64: add comment for RODATA large page retainment   (bnc#558249). - patches.arch/x86-64-align-rodata-kernel-section-to-2mb-with-config_debug_rodata:   x86-64: align RODATA kernel section to 2MB with   CONFIG_DEBUG_RODATA (bnc#558249). - patches.arch/x86-64-preserve-large-page-mapping-for-1st-2mb-kernel-txt-with-config_debug_rodata:   x86-64: preserve large page mapping for 1st 2MB kernel txt   with CONFIG_DEBUG_RODATA (bnc#558249).

--- a/series.conf
+++ b/series.conf
@@ -191,6 +191,10 @@
 	patches.arch/kvm-split-the-KVM-pv-ops-support-by-feature
 	patches.arch/kvm-replace-kvm-io-delay-pv-ops-with-linux-magic
 
+	patches.arch/x86-64-preserve-large-page-mapping-for-1st-2mb-kernel-txt-with-config_debug_rodata
+	patches.arch/x86-64-align-rodata-kernel-section-to-2mb-with-config_debug_rodata
+	patches.arch/x86-64-add-comment-for-rodata-large-page-retainment
+
 	########################################################
 	# x86_64/4096CPUS - from SGI
 	########################################################
