- Forward-port 11.2 patches:   patches.drivers/alsa-sp1-hda-18-msi-wind-u115-fix: ALSA: hda -     Add a position_fix quirk for MSI Wind U115.   patches.drivers/alsa-sp1-hda-19-cx5047-test-mode-fix: ALSA:     hda - Fix Cxt5047 test mode (bnc#559062).   patches.drivers/alsa-sp1-hda-20-fsc-amilo-pi1505-fix: ALSA:     hda - Add a pin-fix for FSC Amilo Pi1505 (bnc#557403).   patches.drivers/alsa-sp1-hda-21-hp-dv3-position-fix-quirk:     ALSA: hda - Add position_fix quirk for HP dv3 (bnc#555935).

--- a/series.conf
+++ b/series.conf
@@ -707,6 +707,10 @@
 	patches.drivers/alsa-sp1-hda-15-fix-build-warning
 	patches.drivers/alsa-sp1-hda-16-stac-dual-headphones-fix
 	patches.drivers/alsa-sp1-hda-17-fix-mute-LED-sync-idt92h383xxx
+	patches.drivers/alsa-sp1-hda-18-msi-wind-u115-fix
+	patches.drivers/alsa-sp1-hda-19-cx5047-test-mode-fix
+	patches.drivers/alsa-sp1-hda-20-fsc-amilo-pi1505-fix
+	patches.drivers/alsa-sp1-hda-21-hp-dv3-position-fix-quirk
 
 	########################################################
 	# Other driver fixes
