- patches.fixes/mac80211-fix-remote-DoS.patch: mac80211: fix   remote DoS (bnc#558267).

--- a/series.conf
+++ b/series.conf
@@ -650,6 +650,7 @@
 	########################################################
 	patches.suse/wireless-no-aes-select
 	patches.fixes/mac80211-fix-spurious-delba-handling.patch
+	patches.fixes/mac80211-fix-remote-DoS.patch
 
 	########################################################
 	# iSCSI
