- supported.conf: update usb driver section

--- a/supported.conf
+++ b/supported.conf
@@ -1694,9 +1694,12 @@
 -		kernel/drivers/telephony/phonedev
 		kernel/drivers/thermal/thermal_sys			# Generic thermal zone interface
 		kernel/drivers/uio/uio
+		kernel/drivers/uio/uio_aec
 		kernel/drivers/uio/uio_cif
+		kernel/drivers/uio/uio_pci_generic
 		kernel/drivers/uio/uio_pdrv
 		kernel/drivers/uio/uio_pdrv_genirq
+		kernel/drivers/uio/uio_sercos3
 		kernel/drivers/uio/uio_smx
 -		kernel/drivers/usb/atm/cxacru				# driver for USB ADSL modems based on Conexant AccessRunner chipset
 		kernel/drivers/usb/atm/speedtch
@@ -1707,15 +1710,22 @@
 		kernel/drivers/usb/class/cdc-acm			# USB Abstract Control Model driver for USB modems and ISDN adapters
 		kernel/drivers/usb/class/cdc-wdm
 		kernel/drivers/usb/class/usblp				# USB Printer Device Class driver
+		kernel/drivers/usb/class/usbtmc				# USB test and measurement driver
 +base		kernel/drivers/usb/core/usbcore
 +base		kernel/drivers/usb/host/ehci-hcd			# 2003-Dec-29 USB 2.0 'Enhanced' Host Controller (EHCI) Driver
+-		kernel/drivers/usb/host/hwa-hc
+-		kernel/drivers/usb/host/isp1362-hcd
 -		kernel/drivers/usb/host/isp116x-hcd			# ISP116x HCD (Host Controller Driver) for USB
 -		kernel/drivers/usb/host/isp1760
 +base		kernel/drivers/usb/host/ohci-hcd			# 2004 Feb 02 USB 1.1 'Open' Host Controller (OHCI) Driver
+-		kernel/drivers/usb/host/oxu210hp-hcd
 		kernel/drivers/usb/host/r8a66597-hcd
 -		kernel/drivers/usb/host/sl811_cs			# PCMCIA driver for SL811HS (as found in REX-CFU1U)
 -		kernel/drivers/usb/host/sl811-hcd
+-		kernel/drivers/usb/host/u132-hcd
 +base		kernel/drivers/usb/host/uhci-hcd			# USB Universal Host Controller Interface driver
+-		kernel/drivers/usb/host/whci/whci-hcd
+		kernel/drivers/usb/host/xhci
 		kernel/drivers/usb/image/mdc800				# USB Driver for Mustek MDC800 Digital Camera
 		kernel/drivers/usb/image/microtek			# Microtek Scanmaker X6 USB scanner driver
 		kernel/drivers/usb/misc/adutux
@@ -1741,12 +1751,16 @@
 		kernel/drivers/usb/misc/usblcd				# USBLCD Driver Version 1.04
 		kernel/drivers/usb/misc/usbled				# USB LED Driver
 		kernel/drivers/usb/misc/uss720				# USB Parport Cable driver for Cables using the Lucent Technologies USS720 Chip
+		kernel/drivers/usb/misc/usbsevseg
+-		kernel/drivers/usb/misc/usbtest
+		kernel/drivers/usb/misc/vstusb
 -		kernel/drivers/usb/mon/usbmon				# The USB Monitor
 		kernel/drivers/usb/serial/aircable
 		kernel/drivers/usb/serial/ark3116
 		kernel/drivers/usb/serial/belkin_sa			# USB Belkin Serial converter driver
 		kernel/drivers/usb/serial/ch341
 		kernel/drivers/usb/serial/cp2101			# Silicon Laboratories CP2101/CP2102 USB to RS232 serial adaptor driver
+		kernel/drivers/usb/serial/cp210x
 		kernel/drivers/usb/serial/cyberjack			# REINER SCT cyberJack pinpad/e-com USB Chipcard Reader Driver
 		kernel/drivers/usb/serial/cypress_m8
 		kernel/drivers/usb/serial/digi_acceleport		# Digi AccelePort USB-2/USB-4 Serial Converter driver
@@ -1771,18 +1785,37 @@
 		kernel/drivers/usb/serial/moto_modem
 		kernel/drivers/usb/serial/navman			# USB Navman GPS device
 		kernel/drivers/usb/serial/omninet			# USB ZyXEL omni.net LCD PLUS Driver
+		kernel/drivers/usb/serial/opticon
 		kernel/drivers/usb/serial/option			# USB Wireless modems
 		kernel/drivers/usb/serial/oti6858
 		kernel/drivers/usb/serial/pl2303			# Prolific PL2303 USB to serial adaptor driver
+		kernel/drivers/usb/serial/qcserial
 		kernel/drivers/usb/serial/safe_serial			# USB Safe Encapsulated Serial
+		kernel/drivers/usb/serial/siemens_mpi
 		kernel/drivers/usb/serial/sierra			# USB Sierra Wireless Modems
 		kernel/drivers/usb/serial/spcp8x5
+		kernel/drivers/usb/serial/symbolserial
 		kernel/drivers/usb/serial/ti_usb_3410_5052
 		kernel/drivers/usb/serial/usb_debug
 		kernel/drivers/usb/serial/usbserial			# USB Serial Driver core
 		kernel/drivers/usb/serial/visor				# USB HandSpring Visor / Palm OS driver
 		kernel/drivers/usb/serial/whiteheat			# USB ConnectTech WhiteHEAT driver
 +base		kernel/drivers/usb/storage/usb-storage			# USB Mass Storage driver for Linux
++base		kernel/drivers/usb/storage/ums-alauda
++base		kernel/drivers/usb/storage/ums-cypress
++base		kernel/drivers/usb/storage/ums-datafab
++base		kernel/drivers/usb/storage/ums-freecom
++base		kernel/drivers/usb/storage/ums-isd200
++base		kernel/drivers/usb/storage/ums-jumpshot
++base		kernel/drivers/usb/storage/ums-karma
++base		kernel/drivers/usb/storage/ums-onetouch
++base		kernel/drivers/usb/storage/ums-sddr09
++base		kernel/drivers/usb/storage/ums-sddr55
++base		kernel/drivers/usb/storage/ums-usbat
+-		kernel/drivers/usb/wusbcore/wusb-cbaf
+-		kernel/drivers/usb/wusbcore/wusb-wa
+-		kernel/drivers/usb/wusbcore/wusbcore
+
 -		kernel/drivers/video/arcfb				# FB driver for Arc monochrome LCD board
 		kernel/drivers/video/arkfb
 		kernel/drivers/video/aty/aty128fb			# FBDev driver for ATI Rage128 / Pro cards
