- Updated the sound section of supported.conf

--- a/supported.conf
+++ b/supported.conf
@@ -2406,6 +2406,7 @@
 		kernel/sound/core/seq/snd-seq-midi-event		# MIDI byte <-> sequencer event coder
 		kernel/sound/core/seq/snd-seq-virmidi			# Virtual Raw MIDI client on Sequencer
 		kernel/sound/core/snd					# Advanced Linux Sound Architecture driver for soundcards.
+		kernel/sound/core/snd-hrtimer				# HRTimer backend
 		kernel/sound/core/snd-hwdep				# Hardware dependent layer
 		kernel/sound/core/snd-page-alloc			# Memory allocator for ALSA system.
 		kernel/sound/core/snd-pcm				# Midlevel PCM code for ALSA.
@@ -2448,6 +2449,9 @@
 +isa		kernel/sound/isa/gus/snd-gusmax
 +isa		kernel/sound/isa/gus/snd-interwave
 +isa		kernel/sound/isa/gus/snd-interwave-stb
++isa		kernel/sound/isa/msnd/snd-msnd-classic
++isa		kernel/sound/isa/msnd/snd-msnd-lib
++isa		kernel/sound/isa/msnd/snd-msnd-pinnacle
 +isa		kernel/sound/isa/opti9xx/snd-miro
 +isa		kernel/sound/isa/opti9xx/snd-opti92x-ad1848
 +isa		kernel/sound/isa/opti9xx/snd-opti92x-cs4231
@@ -2472,21 +2476,24 @@
 +isa		kernel/sound/isa/snd-sgalaxy
 +isa		kernel/sound/isa/snd-sscape
 +isa		kernel/sound/isa/wavefront/snd-wavefront
-		kernel/sound/oss/ad1848
-		kernel/sound/oss/aedsp16				# Audio Excel DSP 16 Driver Version 1.3
-		kernel/sound/oss/kahlua					# Kahlua VSA1 PCI Audio
-		kernel/sound/oss/mpu401
-		kernel/sound/oss/opl3
-		kernel/sound/oss/pas2
-		kernel/sound/oss/pss					# Module for PSS sound cards (based on AD1848, ADSP-2115 and ESC614). This module includes control of output amplifier and synth volume of the Beethoven ADSP-16 card (this may work with other PSS cards).
-		kernel/sound/oss/sb_lib
-		kernel/sound/oss/sb					# OSS Soundblaster ISA PnP and legacy sound driver
-		kernel/sound/oss/sound					# OSS Sound subsystem
-		kernel/sound/oss/sscape
-		kernel/sound/oss/trix
-		kernel/sound/oss/uart401
-		kernel/sound/oss/uart6850
-		kernel/sound/oss/v_midi
+-		kernel/sound/oss/ad1848
+-		kernel/sound/oss/aedsp16				# Audio Excel DSP 16 Driver Version 1.3
+-		kernel/sound/oss/kahlua					# Kahlua VSA1 PCI Audio
+-		kernel/sound/oss/mpu401
+-		kernel/sound/oss/opl3
+-		kernel/sound/oss/msnd
+-		kernel/sound/oss/msnd_classic
+-		kernel/sound/oss/msnd_pinnacle
+-		kernel/sound/oss/pas2
+-		kernel/sound/oss/pss					# Module for PSS sound cards (based on AD1848, ADSP-2115 and ESC614). This module includes control of output amplifier and synth volume of the Beethoven ADSP-16 card (this may work with other PSS cards).
+-		kernel/sound/oss/sb_lib
+-		kernel/sound/oss/sb					# OSS Soundblaster ISA PnP and legacy sound driver
+-		kernel/sound/oss/sound					# OSS Sound subsystem
+-		kernel/sound/oss/sscape
+-		kernel/sound/oss/trix
+-		kernel/sound/oss/uart401
+-		kernel/sound/oss/uart6850
+-		kernel/sound/oss/v_midi
 		kernel/sound/pci/ac97/snd-ac97-codec			# Universal interface for Audio Codec '97
 		kernel/sound/pci/ali5451/snd-ali5451			# ALI M5451
 		kernel/sound/pci/au88x0/snd-au8810			# Aureal vortex
@@ -2504,7 +2511,9 @@
 		kernel/sound/pci/echoaudio/snd-gina24			# Echoaudio Gina24
 		kernel/sound/pci/echoaudio/snd-indigodj			# Echoaudio Indigo DJ
 		kernel/sound/pci/echoaudio/snd-indigo			# Echoaudio Indigo
+		kernel/sound/pci/echoaudio/snd-indigodjx
 		kernel/sound/pci/echoaudio/snd-indigoio			# Echoaudio Indigo IO
+		kernel/sound/pci/echoaudio/snd-indigoiox
 		kernel/sound/pci/echoaudio/snd-layla20			# Echoaudio Layla20
 		kernel/sound/pci/echoaudio/snd-layla24			# Echoaudio Layla24
 		kernel/sound/pci/echoaudio/snd-mia			# Echoaudio Mia
@@ -2516,11 +2525,12 @@
 		kernel/sound/pci/hda/snd-hda-codec-analog		# Analog Device HD-audio codecs
 		kernel/sound/pci/hda/snd-hda-codec-atihdmi		# ATI/AMD HD-audio (HDMI) codecs
 		kernel/sound/pci/hda/snd-hda-codec-ca0110		# CreativeLabs HD-audio codecs
+		kernel/sound/pci/hda/snd-hda-codec-cirrus
 		kernel/sound/pci/hda/snd-hda-codec-cmedia		# C-Media HD-audio codecs
 		kernel/sound/pci/hda/snd-hda-codec-conexant		# Conexant HD-audio codecs
 		kernel/sound/pci/hda/snd-hda-codec-idt			# IDT/Sigmatel HD-audio codecs
 		kernel/sound/pci/hda/snd-hda-codec-intelhdmi		# Intel HD-audio (HDMI) codecs
-		kernel/sound/pci/hda/snd-hda-codec-nvidia		# Nvidia HD-audio (HDMI) codecs
+		kernel/sound/pci/hda/snd-hda-codec-nvhdmi		# Nvidia HD-audio (HDMI) codecs
 		kernel/sound/pci/hda/snd-hda-codec-realtek		# Realtek HD-audio codecs
 		kernel/sound/pci/hda/snd-hda-codec-si3054		# SI-compatible HD-audio modem codecs
 		kernel/sound/pci/hda/snd-hda-codec-via			# VIA HD-audio codecs
@@ -2529,6 +2539,7 @@
 		kernel/sound/pci/ice1712/snd-ice1724			# ICEnsemble ICE1724 (Envy24HT)
 		kernel/sound/pci/ice1712/snd-ice17xx-ak4xxx		# ICEnsemble ICE17xx <-> AK4xxx AD/DA chip interface
 		kernel/sound/pci/korg1212/snd-korg1212			# korg1212
+-		kernel/sound/pci/lx6464es/snd-lx6464es
 		kernel/sound/pci/mixart/snd-mixart			# Digigram miXart
 		kernel/sound/pci/nm256/snd-nm256			# NeoMagic NM256AV/ZX
 		kernel/sound/pci/oxygen/snd-hifier			# TempoTec HiFier Fantasia
@@ -2580,3 +2591,4 @@
 		kernel/sound/usb/snd-usb-audio				# USB Audio
 		kernel/sound/usb/snd-usb-lib				# USB Audio/MIDI helper module
 		kernel/sound/usb/usx2y/snd-usb-usx2y			# TASCAM US-X2Y Version 0.7.2
+-		kernel/sound/usb/usx2y/snd-usb-us122l
