Updated status of ext4 and isofs.

--- a/supported.conf
+++ b/supported.conf
@@ -1967,7 +1967,7 @@
 		kernel/fs/exportfs/exportfs
 		kernel/fs/ext2/ext2					# Second Extended Filesystem
 +base		kernel/fs/ext3/ext3					# Second Extended Filesystem with journaling extensions
--		kernel/fs/ext4/ext4dev
+-		kernel/fs/ext4/ext4
 		kernel/fs/fat/fat
 -		kernel/fs/freevxfs/freevxfs				# Veritas Filesystem (VxFS) driver
 		kernel/fs/fuse/fuse					# FUSE: Filesystem in Userspace
@@ -1977,6 +1977,7 @@
 		kernel/fs/hfs/hfs
 		kernel/fs/hfsplus/hfsplus				# Extended Macintosh Filesystem
 -		kernel/fs/hpfs/hpfs
+		kernel/fs/isofs/isofs
 		kernel/fs/jbd2/jbd2
 +base		kernel/fs/jbd/jbd
 -		kernel/fs/jffs2/jffs2					# The Journalling Flash File System, v2
