- supported.conf: Add perfmon, hid and input modules.

--- a/supported.conf
+++ b/supported.conf
@@ -8,7 +8,12 @@
 # Modules that a base module uses implicitly are also base modules,
 # but at least they need to be marked as supported here.
 
+		kernel/arch/ia64/perfmon/perfmon_generic
+		kernel/arch/ia64/perfmon/perfmon_itanium
+		kernel/arch/ia64/perfmon/perfmon_mckinley
+		kernel/arch/ia64/perfmon/perfmon_montecito
 		kernel/arch/ia64/kernel/err_inject
+
 +external	kernel/arch/powerpc/platforms/cell/cbe-cpufreq
 +external	kernel/arch/powerpc/platforms/cell/cbe_cpufreq_pmi
 +external	kernel/arch/powerpc/platforms/cell/cbe_powerbutton
@@ -411,8 +416,37 @@
 		kernel/drivers/gpu/drm/tdfx/tdfx				# 3dfx Banshee/Voodoo3+
 		kernel/drivers/gpu/drm/ttm/ttm
 -		kernel/drivers/gpu/drm/via/via
+
 		kernel/drivers/hid/hid
+		kernel/drivers/hid/hid-a4tech
+		kernel/drivers/hid/hid-apple
+		kernel/drivers/hid/hid-belkin
+		kernel/drivers/hid/hid-cherry
+		kernel/drivers/hid/hid-chicony
+		kernel/drivers/hid/hid-cypress
+		kernel/drivers/hid/hid-drff
+		kernel/drivers/hid/hid-ezkey
+		kernel/drivers/hid/hid-gaff
+		kernel/drivers/hid/hid-gyration
+		kernel/drivers/hid/hid-kensington
+		kernel/drivers/hid/hid-kye
+		kernel/drivers/hid/hid-logitech
+		kernel/drivers/hid/hid-microsoft
+		kernel/drivers/hid/hid-monterey
+		kernel/drivers/hid/hid-ntrig
+		kernel/drivers/hid/hid-petalynx
+		kernel/drivers/hid/hid-pl
+		kernel/drivers/hid/hid-samsung
+		kernel/drivers/hid/hid-sjoy
+		kernel/drivers/hid/hid-sony
+		kernel/drivers/hid/hid-sunplus
+		kernel/drivers/hid/hid-tmff
+		kernel/drivers/hid/hid-topseed
+		kernel/drivers/hid/hid-twinhan
+		kernel/drivers/hid/hid-wacom
+		kernel/drivers/hid/hid-zpff
 		kernel/drivers/hid/usbhid/usbhid
+
 -		kernel/drivers/hwmon/abituguru3				# Abit uGuru rev. 3
 -		kernel/drivers/hwmon/abituguru				# Abit uGuru rev. 1 and 2
 -		kernel/drivers/hwmon/ad7414				# AD7414
@@ -598,6 +632,7 @@
 		kernel/drivers/infiniband/ulp/ipoib/ib_ipoib
 		kernel/drivers/infiniband/ulp/iser/ib_iser
 		kernel/drivers/infiniband/ulp/srp/ib_srp
+
 		kernel/drivers/input/evbug
 		kernel/drivers/input/ff-memless
 		kernel/drivers/input/gameport/emu10k1-gp		# EMU10k1 gameport driver
@@ -628,30 +663,42 @@
 		kernel/drivers/input/joystick/tmdc			# ThrustMaster DirectConnect joystick driver
 		kernel/drivers/input/joystick/turbografx		# TurboGraFX parallel port interface driver
 		kernel/drivers/input/joystick/twidjoy			# Handykey Twiddler keyboard as a joystick driver
+		kernel/drivers/input/joystick/walkera0701
 		kernel/drivers/input/joystick/warrior			# Logitech WingMan Warrior joystick driver
 		kernel/drivers/input/joystick/xpad
 		kernel/drivers/input/joystick/zhenhua
+		kernel/drivers/input/keyboard/adp5588-keys
 		kernel/drivers/input/keyboard/gpio_keys
+		kernel/drivers/input/keyboard/lm8323
+		kernel/drivers/input/keyboard/matrix_keypad
+		kernel/drivers/input/keyboard/max7359_keypad
 		kernel/drivers/input/keyboard/newtonkbd			# Newton keyboard driver
+		kernel/drivers/input/keyboard/opencores-kbd
 		kernel/drivers/input/keyboard/sunkbd			# Sun keyboard driver
+		kernel/drivers/input/keyboard/twl4030_keypad
 		kernel/drivers/input/keyboard/xtkbd			# XT keyboard driver
 		kernel/drivers/input/misc/apanel
 		kernel/drivers/input/misc/ati_remote
 		kernel/drivers/input/misc/ati_remote2
 		kernel/drivers/input/misc/atlas_btns
+		kernel/drivers/input/misc/cm109
 		kernel/drivers/input/misc/keyspan_remote
+		kernel/drivers/input/misc/pcap_keys
+		kernel/drivers/input/misc/pcf50633-input
 		kernel/drivers/input/misc/pcspkr
 		kernel/drivers/input/misc/powermate
+		kernel/drivers/input/misc/rotary_encoder
+		kernel/drivers/input/misc/twl4030-pwrbutton
 		kernel/drivers/input/misc/uinput			# User level driver support for input subsystem
--		kernel/drivers/input/misc/wistron_btns
+		kernel/drivers/input/misc/winbond-cir
+		kernel/drivers/input/misc/wm831x-on
 		kernel/drivers/input/misc/yealink
 		kernel/drivers/input/mouse/appletouch
 		kernel/drivers/input/mouse/bcm5974
 		kernel/drivers/input/mouse/gpio_mouse
-+isa		kernel/drivers/input/mouse/inport
-+isa		kernel/drivers/input/mouse/logibm
-+isa		kernel/drivers/input/mouse/pc110pad
 		kernel/drivers/input/mouse/sermouse			# Serial mouse driver
+		kernel/drivers/input/mouse/synaptics_i2c
+		kernel/drivers/input/mouse/vsxxxaa
 		kernel/drivers/input/serio/ct82c710			# 82C710 C&T mouse port chip driver
 		kernel/drivers/input/serio/parkbd			# Parallel port to Keyboard port adapter driver
 		kernel/drivers/input/serio/pcips2			# PCI PS/2 keyboard/mouse driver
@@ -663,22 +710,36 @@
 		kernel/drivers/input/tablet/gtco
 		kernel/drivers/input/tablet/kbtab
 		kernel/drivers/input/tablet/wacom
+		kernel/drivers/input/touchscreen/ad7877
+		kernel/drivers/input/touchscreen/ad7879
 		kernel/drivers/input/touchscreen/ads7846		# ADS7846 based touchscreen and sensor driver
+		kernel/drivers/input/touchscreen/eeti_ts
 		kernel/drivers/input/touchscreen/elo			# Elo serial touchscreen driver
 		kernel/drivers/input/touchscreen/elousb
 		kernel/drivers/input/touchscreen/fujitsu_ts
 		kernel/drivers/input/touchscreen/gunze			# Gunze AHL-51S touchscreen driver
 		kernel/drivers/input/touchscreen/htcpen
 		kernel/drivers/input/touchscreen/inexio
+		kernel/drivers/input/touchscreen/mcs5000_ts
 		kernel/drivers/input/touchscreen/mk712			# ICS MicroClock MK712 TouchScreen driver
 		kernel/drivers/input/touchscreen/mtouch			# MicroTouch (3M) serial touchscreen driver
+		kernel/drivers/input/touchscreen/pcap_ts
 		kernel/drivers/input/touchscreen/penmount
 		kernel/drivers/input/touchscreen/touchit213
 		kernel/drivers/input/touchscreen/touchright
 		kernel/drivers/input/touchscreen/touchwin
+		kernel/drivers/input/touchscreen/tsc2007
 		kernel/drivers/input/touchscreen/ucb1400_ts
 		kernel/drivers/input/touchscreen/usbtouchscreen
+		kernel/drivers/input/touchscreen/w90p910_ts
+		kernel/drivers/input/touchscreen/wacom_w8001
 		kernel/drivers/input/touchscreen/wm97xx-ts
++isa		kernel/drivers/input/mouse/inport
++isa		kernel/drivers/input/mouse/logibm
++isa		kernel/drivers/input/mouse/pc110pad
+-		kernel/drivers/input/misc/wistron_btns
+
+
 +isa		kernel/drivers/isdn/act2000/act2000
 		kernel/drivers/isdn/capi/capi				# CAPI4Linux: Userspace /dev/capi20 interface
 		kernel/drivers/isdn/capi/capidrv			# CAPI4Linux: Interface to ISDN4Linux
