--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -197,6 +197,7 @@ Obsoletes:      enic-kmp-%build_flavor
 Obsoletes:      fnic-kmp-%build_flavor
 Obsoletes:      brocade-bfa-kmp-%build_flavor
 Obsoletes:      kvm-kmp-%build_flavor
+Obsoletes:      perfmon-kmp-%build_flavor
 # sle11
 Obsoletes:      ocfs2-kmp-%build_flavor
 # 11.1
