- supported.conf: Add all new hwmon and i2c/busses drivers. The   former unsupported, the latter supported.

--- a/supported.conf
+++ b/supported.conf
@@ -459,10 +459,13 @@
 -		kernel/drivers/hwmon/adm1031				# ADM1031/ADM1030 driver
 -		kernel/drivers/hwmon/adm9240
 -		kernel/drivers/hwmon/ads7828				# 12-bit 8-channel ADC
+-		kernel/drivers/hwmon/adt7462				# Analog Devices ADT7462
 -		kernel/drivers/hwmon/adt7470				# Analog Devices ADT7470
 -		kernel/drivers/hwmon/adt7473				# Analog Devices ADT7473
+-		kernel/drivers/hwmon/adt7475				# Analog Devices ADT7475
 -		kernel/drivers/hwmon/applesmc
 -		kernel/drivers/hwmon/asb100				# ASB100 Bach driver
+-		kernel/drivers/hwmon/asus_atk0110			# Asus ATK0110 (ACPI)
 -		kernel/drivers/hwmon/atxp1
 -		kernel/drivers/hwmon/coretemp				# Intel Core/Core2 thermal sensors
 -		kernel/drivers/hwmon/dme1737				# SMSC DME1737, SCH311x and compatible
@@ -471,9 +474,11 @@
 -		kernel/drivers/hwmon/f71882fg				# Fintek Super-I/O
 -		kernel/drivers/hwmon/f75375s				# Fintek F75373, F75375
 -		kernel/drivers/hwmon/fschmd				# Unified FSC driver
+-		kernel/drivers/hwmon/g760a
 -		kernel/drivers/hwmon/gl518sm				# GL518SM driver
 -		kernel/drivers/hwmon/gl520sm
 -		kernel/drivers/hwmon/hdaps
+-		kernel/drivers/hwmon/hp_accel
 		kernel/drivers/hwmon/hwmon
 		kernel/drivers/hwmon/hwmon-vid
 		kernel/drivers/hwmon/i5k_amb				# Intel 5000 series FB-DIMM AMB
@@ -481,6 +486,8 @@
 +external	kernel/drivers/hwmon/ibmpex				# IBM PowerExecutive power sensors, supported by IBM
 -		kernel/drivers/hwmon/it87				# IT8705F, IT8712F, Sis950 driver
 -		kernel/drivers/hwmon/k8temp				# AMD K8 thermal sensors
+-		kernel/drivers/hwmon/lis3lv02d
+-		kernel/drivers/hwmon/lis3lv02d_spi
 -		kernel/drivers/hwmon/lm63
 -		kernel/drivers/hwmon/lm70				# LM70 (on SPI bus)
 -		kernel/drivers/hwmon/lm75				# LM75 driver
@@ -493,15 +500,22 @@
 -		kernel/drivers/hwmon/lm90				# LM90/ADM1032 driver
 -		kernel/drivers/hwmon/lm92
 -		kernel/drivers/hwmon/lm93				# National Semi. LM93
+-		kernel/drivers/hwmon/lm95241
+-		kernel/drivers/hwmon/ltc4215
+-		kernel/drivers/hwmon/ltc4245
+-		kernel/drivers/hwmon/max1111
 -		kernel/drivers/hwmon/max1619				# MAX1619 sensor driver
 -		kernel/drivers/hwmon/max6650				# MAX6650, MAX6651
 -		kernel/drivers/hwmon/pc87360
 -		kernel/drivers/hwmon/pc87427				# PC87427 fan sensors
+-		kernel/drivers/hwmon/sht15
 -		kernel/drivers/hwmon/sis5595
 -		kernel/drivers/hwmon/smsc47b397
 -		kernel/drivers/hwmon/smsc47m192				# SMSC LPC47M1xx thermal sensors
 -		kernel/drivers/hwmon/smsc47m1				# SMSC LPC47M1xx fan sensors driver
 -		kernel/drivers/hwmon/thmc50				# TI THMC50, Analog Dev. ADM1022
+-		kernel/drivers/hwmon/tmp401
+-		kernel/drivers/hwmon/tmp421
 -		kernel/drivers/hwmon/via686a				# VIA 686A Sensor device
 -		kernel/drivers/hwmon/vt1211				# VIA VT1211 super-I/O sensors
 -		kernel/drivers/hwmon/vt8231
@@ -533,6 +547,7 @@
 		kernel/drivers/i2c/busses/i2c-pca-isa			# ISA base PCA9564 driver
 		kernel/drivers/i2c/busses/i2c-pca-platform
 		kernel/drivers/i2c/busses/i2c-piix4
+		kernel/drivers/i2c/busses/i2c-scmi			# SMBus CMI (ACPI)
 		kernel/drivers/i2c/busses/i2c-simtec
 		kernel/drivers/i2c/busses/i2c-sis5595			# SIS5595 SMBus driver
 		kernel/drivers/i2c/busses/i2c-sis630			# SIS630 SMBus driver
