- needs_update: readd 	patches.suse/perfmon2-remove_get_base_syscall_attr.patch 	patches.suse/perfmon2-remove_syscalls.patch

--- a/series.conf
+++ b/series.conf
@@ -807,6 +807,8 @@
  
 	patches.suse/perfmon2.patch
 	patches.suse/perfmon2_ioctl.patch  
+	patches.suse/perfmon2-remove_syscalls.patch
+	patches.suse/perfmon2-remove_get_base_syscall_attr.patch
 	patches.suse/perfmon2_noutrace.patch  
 
 	patches.fixes/oprofile_bios_ctr.patch
