--- a/supported.conf
+++ b/supported.conf
@@ -1904,9 +1904,10 @@
 +isa		kernel/drivers/watchdog/wdt
 		kernel/drivers/watchdog/wdt_pci			# Driver for the ICS PCI-WDT500/501 watchdog cards
 		kernel/drivers/xen/blkback/blkbk			# Xen block device backend
-		kernel/drivers/xen/blkback/blkback_pagemap		# Xen block device backend
+		kernel/drivers/xen/blkback/blkback-pagemap
 +base		kernel/drivers/xen/blkfront/xenblk			# Xen block device frontend
 		kernel/drivers/xen/blktap/blktap
+-		kernel/drivers/xen/blktap2/blktap2
 		kernel/drivers/xen/core/domctl
 		kernel/drivers/xen/gntdev/gntdev
 		kernel/drivers/xen/netback/netbk			# Xen network device backend
@@ -1919,6 +1920,8 @@
 +external	kernel/drivers/xen/sfc_netback/sfc_netfront
 +external	kernel/drivers/xen/sfc_netutil/sfc_netutil
 		kernel/drivers/xen/tpmback/tpmbk			# Xen TPM device backend
+-		kernel/drivers/xen/usbback/usbbk
+-		kernel/drivers/xen/usbfront/xen-hcd
 		kernel/drivers/xen/xenbus/xenbus_be			# Xen XenBus backend driver support module
 		kernel/fs/9p/9p
 -		kernel/fs/adfs/adfs
