- supported.conf: Mark pmcraid and igbvf as supported;   OSD drivers as unsupported.

--- a/supported.conf
+++ b/supported.conf
@@ -241,6 +241,7 @@
 +base		kernel/drivers/block/loop
 		kernel/drivers/block/loop_fish2
 		kernel/drivers/block/nbd				# Network Block Device
+-		kernel/drivers/block/osdblk
 -		kernel/drivers/block/paride/aten
 -		kernel/drivers/block/paride/bpck
 -		kernel/drivers/block/paride/bpck6
@@ -752,7 +753,7 @@
 		kernel/drivers/md/dm-regions
 		kernel/drivers/md/dm-region_hash
 		kernel/drivers/md/dm-round-robin			# Round-robin path selector
-		kernel/drivers/md/dm-leastpending-path			# Least pending path selector
+		kernel/drivers/md/dm-least-pending
 		kernel/drivers/md/dm-queue-length			# Queue-lenght oriented dynamic load balancer
 		kernel/drivers/md/dm-service-time			# Service-time oriented dynamic load balancer
 		kernel/drivers/md/dm-snapshot				# device-mapper snapshot target
@@ -1238,6 +1239,7 @@
 +external	kernel/drivers/net/ibmveth				# IBM eServer i/pSeries Virtual Ethernet Device Driver
 		kernel/drivers/net/ifb					# IMQ replacement
 		kernel/drivers/net/igb/igb				# Intel Gigabit Ethernet driver
+		kernel/drivers/net/igbvf/igbvf				# Intel Gigabit Ethernet SR-IOV driver
 		kernel/drivers/net/ipg
 		kernel/drivers/net/irda/act200l-sir			# ACTiSYS ACT-IR200L dongle driver
 		kernel/drivers/net/irda/actisys-sir			# ACTiSYS IR-220L and IR-220L+ dongle driver
@@ -1541,6 +1543,7 @@
 		kernel/drivers/s390/char/monreader
 		kernel/drivers/s390/char/monwriter
 		kernel/drivers/s390/char/raw3270
+		kernel/drivers/s390/char/sclp_async
 		kernel/drivers/s390/char/sclp_cpi
 		kernel/drivers/s390/char/tape
 		kernel/drivers/s390/char/tape_34xx
@@ -1631,6 +1634,8 @@
 		kernel/drivers/scsi/mvsas
 +isa		kernel/drivers/scsi/NCR53c406a
 		kernel/drivers/scsi/nsp32
+-		kernel/drivers/scsi/osd/libosd
+-		kernel/drivers/scsi/osd/osd
 		kernel/drivers/scsi/osst				# OnStream {DI-|FW-|SC-|USB}{30|50} Tape Driver
 +isa		kernel/drivers/scsi/pas16
 		kernel/drivers/scsi/pcmcia/aha152x_cs
@@ -1638,6 +1643,7 @@
 		kernel/drivers/scsi/pcmcia/nsp_cs
 		kernel/drivers/scsi/pcmcia/qlogic_cs			# Driver for the PCMCIA Qlogic FAS SCSI controllers
 		kernel/drivers/scsi/pcmcia/sym53c500_cs			# SYM53C500 PCMCIA SCSI driver
+		kernel/drivers/scsi/pmcraid
 		kernel/drivers/scsi/ppa
 		kernel/drivers/scsi/ps3rom				# Sony PS3 ROM update
 		kernel/drivers/scsi/qla1280				# Qlogic ISP SCSI (qla1x80/qla1x160) driver
