- supported.conf: hp_accel is supported (FATE #306448).

--- a/supported.conf
+++ b/supported.conf
@@ -481,7 +481,7 @@
 -		kernel/drivers/hwmon/gl518sm				# GL518SM driver
 -		kernel/drivers/hwmon/gl520sm
 -		kernel/drivers/hwmon/hdaps
--		kernel/drivers/hwmon/hp_accel
+		kernel/drivers/hwmon/hp_accel				# HP 3D DriveGuard (FATE #306448)
 		kernel/drivers/hwmon/hwmon
 		kernel/drivers/hwmon/hwmon-vid
 		kernel/drivers/hwmon/i5k_amb				# Intel 5000 series FB-DIMM AMB
