- supported.conf: support lis3lv02d, hp_accel needs it.

--- a/supported.conf
+++ b/supported.conf
@@ -489,7 +489,7 @@
 +external	kernel/drivers/hwmon/ibmpex				# IBM PowerExecutive power sensors, supported by IBM
 -		kernel/drivers/hwmon/it87				# IT8705F, IT8712F, Sis950 driver
 -		kernel/drivers/hwmon/k8temp				# AMD K8 thermal sensors
--		kernel/drivers/hwmon/lis3lv02d
+		kernel/drivers/hwmon/lis3lv02d				# needed by hp_accel
 -		kernel/drivers/hwmon/lis3lv02d_spi
 -		kernel/drivers/hwmon/lm63
 -		kernel/drivers/hwmon/lm70				# LM70 (on SPI bus)
