- Moved non-kernel.org patches to patches.rpmify.

--- a/series.conf
+++ b/series.conf
@@ -35,11 +35,11 @@
 	# since they're not actually upstream, but if the
 	# packages don't build, that's pretty useless too.
         ########################################################
-	patches.kernel.org/psmouse-section-conflict.diff
-	patches.kernel.org/ipmi-section-conflict.diff
-	patches.kernel.org/md-section-conflict
-	patches.kernel.org/gdth-section-conflict
-	patches.kernel.org/arch-include-asm-fixes
+	patches.rpmify/psmouse-section-conflict.diff
+	patches.rpmify/ipmi-section-conflict.diff
+	patches.rpmify/md-section-conflict
+	patches.rpmify/gdth-section-conflict
+	patches.rpmify/arch-include-asm-fixes
 	patches.rpmify/arm-arch_include_asm-fix.diff
 	patches.rpmify/tsi148-dependency
 	patches.rpmify/staging-missing-sched.h
