--- a/series.conf
+++ b/series.conf
@@ -317,16 +317,15 @@
 	# CPUFREQ
 	########################################################
 
-# cpuidle: not yet -- unresolved symbol on i586
-#	patches.suse/cpuidle-cleanup
-#	patches.suse/cpuidle-implement-list
-#	patches.suse/cpuidle-cleanup-x86
-#	patches.suse/cpuidle-enable-pseries
-#	patches.suse/cpuidle-cleanup-pseries
-#	patches.suse/cpuidle-add-default-idle-ppc
-#	patches.suse/cpuidle-pseries-proc-idle
-#	patches.suse/cpuidle-eliminate-ppcmdpowersave1
-#	patches.suse/cpuidle-documentation
+	patches.suse/cpuidle-cleanup
+	patches.suse/cpuidle-implement-list
+	patches.suse/cpuidle-cleanup-x86
+	patches.suse/cpuidle-enable-pseries
+	patches.suse/cpuidle-cleanup-pseries
+	patches.suse/cpuidle-add-default-idle-ppc
+	patches.suse/cpuidle-pseries-proc-idle
+	patches.suse/cpuidle-eliminate-ppcmdpowersave1
+	patches.suse/cpuidle-documentation
 	patches.fixes/cpufreq_ondemand_performance_optimise_default_settings.patch
 
 	########################################################
