- patches.drivers/8250_pnp-wacom-add: serial/8250_pnp.c: add   new Wacom devices (bnc#544763).

--- a/series.conf
+++ b/series.conf
@@ -744,6 +744,7 @@
 	# md
 	########################################################
 
+	patches.drivers/8250_pnp-wacom-add
 
 	##########################################################
 	#
