--- a/config.conf
+++ b/config.conf
@@ -11,6 +11,7 @@
 +i386		i386/default
 +i386		i386/desktop
 +i386		i386/pae
++i386 -syms	i386/vmi
 +i386 -syms	i386/debug
 +i386		i386/xen
 +i386 -syms	i386/ec2
