--- a/series.conf
+++ b/series.conf
@@ -531,6 +531,7 @@
 	patches.fixes/scsi-check-host-lookup-failure
 	patches.drivers/aacraid-24701-update
 	patches.drivers/megaraid-04.12-update
+	patches.drivers/qla2xxx-8.03.01-k7-update
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
