- patches.arch/s390-03-qeth-hs-traffic-analyzer.patch: qeth:   HiperSockets Network Traffic Analyzer (bnc#560674).

--- a/series.conf
+++ b/series.conf
@@ -102,6 +102,8 @@
 	patches.arch/s390-02-05-zcrypt-speed-cex2c.patch
 	patches.arch/s390-02-06-zcrypt-speed-cex3.patch
 
+	patches.arch/s390-03-qeth-hs-traffic-analyzer.patch
+
         ########################################################
         # Scheduler / Core
         ########################################################
