- Update config files. - patches.suse/revert-usb-remove-phidget-drivers-from-kernel-tree.patch:   Revert "USB: remove phidget drivers from kernel tree.".

--- a/series.conf
+++ b/series.conf
@@ -679,6 +679,9 @@
 	########################################################
 	patches.suse/usb-storage-disable-delay.patch
 
+	# remove this for openSUSE 11.3, it is here only for SLE11 SP1 and later.
+	patches.suse/revert-usb-remove-phidget-drivers-from-kernel-tree.patch
+
 	########################################################
 	# I2C
 	########################################################
