- patches.drivers/lpfc-add-raywire-id: Add missing PCI-ID to lpfc.

--- a/series.conf
+++ b/series.conf
@@ -534,6 +534,7 @@
 	patches.drivers/aacraid-24701-update
 	patches.drivers/megaraid-04.12-update
 	patches.drivers/qla2xxx-8.03.01-k7-update
+	patches.drivers/lpfc-add-raywire-id
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
