--- a/series.conf
+++ b/series.conf
@@ -983,10 +983,13 @@
 	patches.xen/xen3-patch-2.6.29
 	patches.xen/xen3-patch-2.6.30
 	patches.xen/xen3-patch-2.6.31
-	patches.xen/xen3-patch-2.6.32-rc4
-	patches.xen/xen3-patch-2.6.32-rc4-rc5
-	patches.xen/xen3-patch-2.6.32-rc5-rc6
+	patches.xen/xen3-patch-2.6.32
 	patches.xen/xen3-seccomp-disable-tsc-option
+	patches.xen/xen3-rlim-0025-x86-add-ia32-compat-prlimit-syscalls.patch
+	patches.xen/xen3-x86-fix-nodac
+	patches.xen/xen3-x86-mcp51-no-dac
+	patches.xen/xen3-x86-64-preserve-large-page-mapping-for-1st-2mb-kernel-txt-with-config_debug_rodata
+	patches.xen/xen3-x86-64-align-rodata-kernel-section-to-2mb-with-config_debug_rodata
 	patches.xen/xen3-kdb-x86
 	patches.xen/xen3-stack-unwind
 	patches.xen/xen3-x86_64-unwind-annotations
@@ -1013,6 +1016,8 @@
 	patches.xen/xen-netback-nr-irqs
 	patches.xen/xen-netback-notify-multi
 	patches.xen/xen-unpriv-build
+	patches.xen/xen-vmalloc_32
+	patches.xen/xen-dcdbas
 	patches.xen/xen-x86-panic-no-reboot
 	patches.xen/xen-x86-dcr-fallback
 	patches.xen/xen-x86-consistent-nmi
@@ -1026,3 +1031,4 @@
 	patches.xen/xen-x86_64-pgd-alloc-order
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
+	patches.xen/xen-x86_64-nx-user-mappings
