- patches.drivers/synaptics-hp-clickpad: Input: Add support of   clickpad mode to synaptics mouse driver (bnc#547370).

--- a/series.conf
+++ b/series.conf
@@ -695,6 +695,7 @@
 	patches.drivers/elousb.patch
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.fixes/hid-fixup-ncr-quirk.patch
+	patches.drivers/synaptics-hp-clickpad
 
 	##########################################################
 	# Sound
