- patches.arch/s390-kvm-prefix.patch: KVM: s390: Fix prefix   register checking in arch/s390/kvm/sigp.c (FATE#306513). - patches.arch/s390-kvm-psw.patch: KVM: s390: Make psw available   on all exits, not just a subset (FATE#306513).

--- a/series.conf
+++ b/series.conf
@@ -888,6 +888,8 @@
 
 	patches.fixes/kvm-ioapic.patch
 	patches.fixes/kvm-macos.patch
+	patches.arch/s390-kvm-psw.patch
+	patches.arch/s390-kvm-prefix.patch
 
         ########################################################
 	# Staging tree patches
