--- a/series.conf
+++ b/series.conf
@@ -395,6 +395,7 @@
 	# dlm
 	########################################################
 	patches.fixes/dlm-enable-debug.patch
+	patches.suse/64bytes_lvb_len.diff
 
 	########################################################
 	# ocfs2
