--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -142,6 +142,7 @@ Source46:       modversions
 Source47:       kabi.pl
 Source48:       split-modules
 Source49:	kernel-spec-macros
+Source50:       generic_serial-blacklist
 Source100:      config.tar.bz2
 Source101:      patches.arch.tar.bz2
 Source102:      patches.drivers.tar.bz2
@@ -601,6 +602,9 @@ if [ %CONFIG_MODULES = y ]; then
     target=${target#%build_src_dir/}
     rm "$link"
     ln -s ../../../../linux-%kernelrelease%variant/"$target" "$link"
+    # bnc#551348
+    install -d -m 755 %buildroot/etc/modprobe.d/
+    install -m 644 %_sourcedir/generic_serial-blacklist %buildroot/etc/modprobe.d/
 fi
 
 add_dirs_to_filelist() {
@@ -646,6 +650,7 @@ done
 	     ! -path '*/modules.builtin' \) -printf '%%%%%%%%ghost /%%p\n' \
 	       -o -name '*.ko' -prune -o -printf '/%%p\n'
 	cat %my_builddir/base-modules
+	echo '%%%%config /etc/modprobe.d/generic_serial-blacklist'
     fi
     test -d lib/firmware/%kernelrelease-%build_flavor && \
     find lib/firmware/%kernelrelease-%build_flavor \
