--- a/series.conf
+++ b/series.conf
@@ -725,6 +725,7 @@
 	patches.drivers/alsa-sp1-hda-19-cx5047-test-mode-fix
 	patches.drivers/alsa-sp1-hda-20-fsc-amilo-pi1505-fix
 	patches.drivers/alsa-sp1-hda-21-hp-dv3-position-fix-quirk
+	patches.drivers/alsa-sp1-hda-22-alc888-exclude-unusable-adcs
 
 	########################################################
 	# Other driver fixes
