- needs_update: - patches.suse/mm-devzero-optimisation.patch: mm: /dev/zero   optimisation (bnc#430738).

--- a/series.conf
+++ b/series.conf
@@ -280,6 +280,7 @@
 	patches.suse/mm-tune-dirty-limits.patch
 
 	patches.suse/mm-vmalloc-fail-dump-stack.patch
+	patches.suse/mm-devzero-optimisation.patch
 
 	########################################################
 	# nfsacl protocol (agruen)
