- patches.fixes/ipc-ns-fix-memory-leak-idr.patch: ipc: ns fix   memory leak (bnc#518767). - patches.fixes/ipc-remove-unreachable-code-in-semc.patch:   (bnc#518767). - patches.fixes/ipc-semc-add-a-per-semaphore-pending-list.patch:   (bnc#518767). - patches.fixes/ipc-semc-optimize-if-semops-fail.patch:   (bnc#518767). - patches.fixes/ipc-semc-optimize-single-semop-operations.patch:   (bnc#518767). - patches.fixes/ipc-semc-optimize-single-sops-when-semval-is-zero.patch:   (bnc#518767). - patches.fixes/ipc-semc-sem-optimise-undo-list-search.patch:   (bnc#518767). - patches.fixes/ipc-semc-sem-preempt-improve.patch:  (bnc#518767). - patches.fixes/ipc-semc-sem-use-list-operations.patch:   (bnc#518767).

--- a/series.conf
+++ b/series.conf
@@ -282,6 +282,19 @@
 	patches.suse/mm-vmalloc-fail-dump-stack.patch
 	patches.suse/mm-devzero-optimisation.patch
 
+        ########################################################
+        # IPC patches
+        ########################################################
+	patches.fixes/ipc-ns-fix-memory-leak-idr.patch
+	patches.fixes/ipc-semc-sem-optimise-undo-list-search.patch
+	patches.fixes/ipc-semc-sem-use-list-operations.patch
+	patches.fixes/ipc-semc-sem-preempt-improve.patch
+	patches.fixes/ipc-semc-optimize-if-semops-fail.patch
+	patches.fixes/ipc-semc-add-a-per-semaphore-pending-list.patch
+	patches.fixes/ipc-semc-optimize-single-semop-operations.patch
+	patches.fixes/ipc-semc-optimize-single-sops-when-semval-is-zero.patch
+	patches.fixes/ipc-remove-unreachable-code-in-semc.patch
+
 	########################################################
 	# nfsacl protocol (agruen)
 	########################################################
