- patches.suse/audit-export-logging.patch: export audit logging   symbols.

--- a/series.conf
+++ b/series.conf
@@ -871,6 +871,11 @@
 	patches.suse/cgroup-disable-memory.patch
 
         ########################################################
+	# audit subsystem
+        ########################################################
+	patches.suse/audit-export-logging.patch
+
+        ########################################################
 	# Performance Monitoring, Tracing etc
 	########################################################
  
