- patches.fixes/tehuti-firmware-name: Tehuti network driver   references wrong firmware (bnc#562092).

--- a/series.conf
+++ b/series.conf
@@ -583,6 +583,7 @@
 	patches.fixes/tg3-fix-default-wol.patch
 	patches.drivers/ehea-modinfo.patch
 	patches.drivers/igb-add-support-for-82576NS-SerDes-adapter.patch
+	patches.fixes/tehuti-firmware-name
 
 	# entropy FATE##307517
         patches.drivers/bnx2-entropy-source.patch
