- needs_update: removed novfs patches, as the corresponding changes are   already incorporated into the sources, except the following simple fix: - patches.suse/novfs-fix-debug-message.patch: novfs: fix debug   message.

--- a/series.conf
+++ b/series.conf
@@ -441,6 +441,7 @@
 	# novfs
 	########################################################
 	patches.suse/novfs-client-module
+	patches.suse/novfs-fix-debug-message.patch
 
 	########################################################
 	# other filesystem stuff
