--- a/series.conf
+++ b/series.conf
@@ -558,6 +558,7 @@
 	patches.drivers/megaraid-04.12-update
 	patches.drivers/qla2xxx-8.03.01-k7-update
 	patches.drivers/lpfc-add-raywire-id
+	patches.drivers/megaraid-mbox-fix-SG_IO
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
